Updates Bootstrap and axdd-components. Fixes tooltip white space. Updates layout.

--- a/pathways_vue/css/custom.scss
+++ b/pathways_vue/css/custom.scss
@@ -1,10 +1,16 @@
 @use "sass:map";
-@import 'axdd-components/src/assets/css/custom.scss';
+@import 'axdd-components/src/assets/css/theme';
+
+// https://getbootstrap.com/docs/5.1/customize/options/
+// TODO: enable bootstrap options for the app
+// $enable-cssgrid: true;
+// $enable-gradients: true;
+$enable-negative-margins: true;
 
 // override variables
 $nav-height: 52px;
 $bar-height: 40px;
-$link-color: #0069d9; //a11y blue
+$link-color: #0069d9; // a11y blue
 
 // pathways custom theme colors
 $custom-colors: (
@@ -24,10 +30,6 @@ $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 $utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
 $utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
 $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
-
-// import bootstrap and bootstrap-icons
-@import "bootstrap/scss/bootstrap";
-@import "bootstrap-icons/font/bootstrap-icons.css";
 
 // additional non-bootstrap styles
 
@@ -66,4 +68,6 @@ a {
   border-radius: 0.25rem;
 }
 
-
+// import bootstrap and bootstrap-icons
+@import "bootstrap/scss/bootstrap";
+@import "bootstrap-icons/font/bootstrap-icons.css";
